# stylometric-ai-detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
stylometric_ai_detector/: __init__.py  features.py  predict.py
tests/: __init__.py  test_features.py  test_predict.py
