[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stylometric-ai-detector"
version = "0.2.4"
description = "AI vs Human text detection using stylometric features and a Random Forest classifier — a baseline model for benchmarking."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Dinis", email = "akulov.dinis@gmail.com"},
]
keywords = [
    "nlp",
    "text-classification",
    "ai-detection",
    "stylometry",
    "random-forest",
    "machine-learning",
    "baseline",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "scikit-learn>=1.0",
    "joblib>=1.0",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "isort>=5.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://github.com/dinis-a/stylometric-ai-detector"
Repository = "https://github.com/dinis-a/stylometric-ai-detector"

[tool.setuptools.packages.find]
include = ["stylometric_ai_detector*"]

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
